# EmailShield

./: .gitignore  README.md  netlify.toml  suite.md
api/: .env.example  Projet.md  Railway.toml  blocklist.txt  requirements.txt
api/app/: __init__.py  cache.py  config.py  detection.py  main.py  models.py
api/db/: schema.sql
api/sdk/node/: index.js  package.json
api/sdk/python/: pyproject.toml
api/sdk/python/emailshield/: __init__.py
api/tests/: conftest.py  test_api.py  test_detection.py
scripts/: refresh_blocklist.py
web/: README.md  package-lock.json  package.json
web/netlify/functions/: _clerk.ts  admin-keys-create.ts  admin-keys-list.ts  admin-keys-revoke.ts  admin-usage.ts  billing-checkout.ts  billing-portal.ts  me.ts
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
web/src/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/app/dashboard/api-keys/: page.tsx
web/src/app/dashboard/billing/: page.tsx
web/src/app/dashboard/usage/: page.tsx
web/src/app/docs/quickstart/: page.tsx
web/src/components/: site-footer.tsx  site-header.tsx
web/src/components/dashboard/: header.tsx  sidebar.tsx  usage-chart.tsx
web/src/lib/: api.ts  dashboard-links.ts  db.ts  env.ts
