[project]
name = "emailshield"
version = "0.1.0"
description = "Minimal Python SDK for EmailShield"
authors = [{ name = "MailShield", email = "support@mailshield.dev" }]
readme = "../README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0,<0.28.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
